@@ -1,4 +1,5 @@
 <?php
+require_once('functions/misc.php');
 
 /*
  * $prod_name - a string for this glosary name
@@ -15,6 +16,26 @@ $prod_ver = "N.N";
 $base_path = dirname(__FILE__);
 $file_glossary = $base_path."/data/glosar.txt";
 $file_history = $base_path."/data/history.txt";
+
+/*
+ * $base_url - URL of this glosary installation
+ */
+$base_url = str_replace(currentPageName(), "", currentPageURL());
+
+/*
+ * $base_url_wiki - the root URL of the wiki installation, ending with slash
+ *                - leave empty to ignore it
+ */
+$base_url_wiki = "http://www.i18n.ro/";
+
+/*
+ * $base_url_open_trans
+ *      the root URL of the open-trans for your language
+ *      term will be appended to this string
+ *      leave empty to ignore it
+ */
+$base_url_open_trans = "http://en.ro.open-tran.eu/suggest/";
+
 
 /*
  * $username is the global variable hosting 
